--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="container mt-5">
+<app-header></app-header>
+<div class="container">
     <div class="row">
-        <div class="col-md-12">HOLA!</div>
+        <div class="col-md-12">
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
+        </div>
     </div>
 </div>
