--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">
@@ -12,23 +12,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="#">
                         Recipes
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="#">
                         Shopping List
                     </a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Manage</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Save Data</a>
-                        <a class="dropdown-item" href="#">Fetch Data</a>
+                        <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Save Data</a>
+                        <a class="dropdown-item" href="#" data-toggle="collapse" data-target=".navbar-collapse.show">Fetch Data</a>
                     </div>
                 </li>
             </ul>
