--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,12 +13,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#" (click)="onSelect('recipe')">
                         Recipes
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#" (click)="onSelect('shopping-list')">
                         Shopping List
                     </a>
                 </li>
