--- a/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-sm-12">
-        <img src="" alt="" class="img-responsive">
+        <img style="max-height: 300px;"
+        [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-sm-12">
-        <h1>Recipe Name</h1>
+        <h1> {{ recipe.name }}</h1>
     </div>
 </div>
 <div class="row">
@@ -24,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        Description
+        {{ recipe.description }}
     </div>
     <div class="col-sm-12">
         Ingredients
