--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,18 +8,9 @@
 <hr />
 <div class="row">
     <div class="col-sm-12">
-        <a href="#" class="list-group-item clearfix" *ngFor="let recipe of recipes">
-            <div class="float-left">
-                <h4 class="list-group-item-header">
-                    {{ recipe.name }}
-                </h4>
-                <p class="list-group-item-text">{{ recipe.description }}</p>
-            </div>
-            <span class="float-right">
-                <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive"
-                    style="max-height: 70px;">
-            </span>
-        </a>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item
+        *ngFor="let recipeEl of recipes" [recipe]="recipeEl"
+        (recipeSelected)="onRecipeSelected(recipeEl)"
+        ></app-recipe-item>
     </div>
 </div>
