include add ingredient functionality

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-sm-10">
-        <app-shopping-edit></app-shopping-edit>
+        <app-shopping-edit
+        (ingredientAdded)="ingredientAdded($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <a href="" class="list-group-item" style="cursor: pointer" 
