sample of how to create a custom directive

--- a/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-list/recipe-detail/recipe-detail.component.html
@@ -11,8 +11,9 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        <div class="btn-group">
-            <button class="btn btn-primary dropdown-toggle">
+
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                 Manage Recipe
             </button>
             <ul class="dropdown-menu">
@@ -21,6 +22,7 @@
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
         </div>
+
     </div>
 </div>
 <div class="row">
